--- a/parcel/aboutus.pug
+++ b/parcel/aboutus.pug
@@ -13,146 +13,143 @@ head
       img#table(src='src/table.png', type='button', onclick='table()')
       img#last(src='src/last.png', type='button', onclick='last()')
     #page_01(style='display: none;')
-      #page_title_word &#x9006;&#x990A;&#x6210;&#x904A;&#x6232;&#x7684;&#x521D;&#x8877;
+      #page_title_word 逆養成遊戲的初衷
       img#circle_1(src='src/circle1.png', type='button', onclick='goal()')
       img#circle_2(src='src/circle2.png', type='button', onclick='why()')
       img#circle_3(src='src/circle3.png', type='button', onclick='how()')
     #page_01_goal(style='display: none;')
       img#circle_4(src='src/circle1.png')
       img#box(src='src/box1.png')
-      #intro &#x8B93;&#x9280;&#x9AEE;&#x65CF;&#x591A;&#x51FA;&#x5916;&#x8D70;&#x8D70;&#xFF0C;&#x9810;&#x9632;&#x6162;&#x6027;&#x75BE;&#x75C5;&#xFF0C;&#x64C1;&#x6709;&#x5065;&#x5EB7;&#x7684;&#x8EAB;&#x5FC3;&#x9748;&#x3002;
+      #intro 讓銀髮族多出外走走，預防慢性疾病，擁有健康的身心靈。
     #page_01_why(style='display: none;')
       img#circle_4(src='src/circle2.png')
       img#box(src='src/box2.png')
-      #intro &#x6211;&#x5011;&#x60F3;&#x7D66;&#x9280;&#x9AEE;&#x65CF;&#x5011;&#x6700;&#x5065;&#x5EB7;&#x5FEB;&#x6A02;&#x7684;&#x8001;&#x5E74;&#x751F;&#x6D3B;&#xFF0C;&#x8D8A;&#x6D3B;&#x8D8A;&#x5E74;&#x8F15;!
+      #intro 我們想給銀髮族們最健康快樂的老年生活，越活越年輕!
     #page_01_how(style='display: none;')
       img#circle_4(src='src/circle3.png')
       img#box(src='src/box3.png')
-      #intro &#x4EE5;&#x4EFB;&#x52D9;&#x7684;&#x65B9;&#x5F0F;&#xFF0C;&#x8A98;&#x5C0E;&#x9280;&#x9AEE;&#x65CF;&#x51FA;&#x5916;&#x4E92;&#x52D5;&#xFF0C;&#x4EFB;&#x52D9;&#x9054;&#x6210;&#x5F8C;&#xFF0C;&#x7D66;&#x4E88;&#x734E;&#x52F5;
+      #intro 以任務的方式，誘導銀髮族出外互動，任務達成後，給予獎勵
     #page_02(style='display: none;')
-      #page_title_word &#x6210;&#x54E1;&#x4ECB;&#x7D39;
+      #page_title_word 成員介紹
       img#photo_1(src='src/photo/方藝璇.jpg', type='button', onclick='photo1()')
-      #page_title_word(style='left: 25vh; top: 46.5vh; font-size: 3vh;') / &#x65B9;&#x85DD;&#x7487;
+      #page_title_word(style='left: 25vh; top: 46.5vh; font-size: 3vh;') / 方藝璇
       img#photo_2(src='src/photo/范瑀文.jpg', type='button', onclick='photo2()')
-      #page_title_word(style='left: 25vh; top: 70.5vh; font-size: 3vh;') / &#x8303;&#x7440;&#x6587;
+      #page_title_word(style='left: 25vh; top: 70.5vh; font-size: 3vh;') / 范瑀文
     #page_02_01(style='display: none;')
       img#photo_big(src='src/photo/方藝璇.jpg')
-      #name_big / &#x65B9;&#x85DD;&#x7487;
+      #name_big / 方藝璇
       img#intro_box(src='src/intro_box.png')
       #intro_big
-        | &#x8077;&#x4F4D; | &#x8A2D;&#x8A08;&#x5E2B;
+        | 職位 | 設計師
         br
-        |                         &#x8208;&#x8DA3; | &#x767B;&#x5C71; &#x63A2;&#x96AA; &#x6500;&#x5CA9;
+        |                         興趣 | 登山 探險 攀岩
         br
-        |                         &emsp;&emsp;&nbsp;&thinsp;&thinsp;&thinsp;&#x770B;&#x66F8;
+        |                         &emsp;&emsp;&nbsp;&thinsp;&thinsp;&thinsp;看書
         br
-        |                         &#x5C08;&#x9577; | &#x63D2;&#x756B; &#x5E73;&#x9762;&#x8A2D;&#x8A08;
+        |                         專長 | 插畫 平面設計
         br
-        |                         &#x8CA0;&#x8CAC; | &#x8A2A;&#x8AC7; &#x7F8E;&#x8853;&#x8A2D;&#x8A08;
+        |                         負責 | 訪談 美術設計
     #page_02_02(style='display: none;')
       img#photo_big(src='src/photo/范瑀文.jpg')
-      #name_big / &#x8303;&#x7440;&#x6587;
+      #name_big / 范瑀文
       img#intro_box(src='src/intro_box.png')
       #intro_big
-        | &#x8077;&#x4F4D; | &#x8A2D;&#x8A08;&#x5E2B;
+        | 職位 | 設計師
         br
-        |                         &#x8208;&#x8DA3; | &#x770B;&#x96FB;&#x5F71;.&#x651D;&#x5F71;
+        |                         興趣 | 看電影.攝影
         br
-        |                         &#x5C08;&#x9577; | &#x526A;&#x7247;.&#x5E73;&#x9762;&#x88FD;&#x4F5C;
+        |                         專長 | 剪片.平面製作
         br
-        |                         &#x8CA0;&#x8CAC; | &#x4ECB;&#x9762;&#x7F8E;&#x8853;&#x8A2D;&#x8A08;
+        |                         負責 | 介面美術設計
     #page_03(style='display: none;')
-      #page_title_word &#x6210;&#x54E1;&#x4ECB;&#x7D39;
+      #page_title_word 成員介紹
       img#photo_1(src='src/photo/張禾姈.jpg', type='button', onclick='photo3()')
-      #page_title_word(style='left: 25vh; top: 46.5vh; font-size: 3vh;') / &#x5F35;&#x79BE;&#x59C8;
+      #page_title_word(style='left: 25vh; top: 46.5vh; font-size: 3vh;') / 張禾姈
       img#photo_2(src='src/photo/黃冠淳.jpg', type='button', onclick='photo4()')
-      #page_title_word(style='left: 25vh; top: 70.5vh; font-size: 3vh;') / &#x9EC3;&#x51A0;&#x6DF3;
+      #page_title_word(style='left: 25vh; top: 70.5vh; font-size: 3vh;') / 黃冠淳
     #page_03_01(style='display: none;')
       img#photo_big(src='src/photo/張禾姈.jpg')
-      #name_big / &#x5F35;&#x79BE;&#x59C8;
+      #name_big / 張禾姈
       img#intro_box(src='src/intro_box.png')
       #intro_big
-        | &#x8077;&#x4F4D; | &#x5DE5;&#x7A0B;&#x5E2B;
+        | 職位 | 工程師
         br
-        |                         &#x8208;&#x8DA3; | &#x5BC6;&#x5BA4;&#x9003;&#x812B;
+        |                         興趣 | 密室逃脫
         br
-        |                         &emsp;&emsp;&nbsp;&thinsp;&thinsp;&thinsp;&#x89E3;&#x8B0E;&#x904A;&#x6232;
+        |                         &emsp;&emsp;&nbsp;&thinsp;&thinsp;&thinsp;解謎遊戲
         br
-        |                         &#x5C08;&#x9577; | &#x7269;&#x4EF6;&#x5C0E;&#x5411;&#x8A2D;&#x8A08;
+        |                         專長 | 物件導向設計
         br
-        |                         &#x8CA0;&#x8CAC; | &#x524D;&#x7AEF;&#x88FD;&#x4F5C;
+        |                         負責 | 前端介面製作
     #page_03_02(style='display: none;')
       img#photo_big(src='src/photo/黃冠淳.jpg')
-      #name_big / &#x9EC3;&#x51A0;&#x6DF3;
+      #name_big / 黃冠淳
       img#intro_box(src='src/intro_box.png')
       #intro_big
-        | &#x8077;&#x4F4D; | &#x5DE5;&#x7A0B;&#x5E2B;
+        | 職位 | 工程師
         br
-        |                         &#x8208;&#x8DA3; | &#x7C43;&#x7403; popping
+        |                         興趣 | 籃球 popping
         br
-        |                         &#x5C08;&#x9577; | &#x6700;&#x4F73;&#x5316;&#x8A2D;&#x8A08;
+        |                         專長 | 最佳化設計
         br
-        |                         &#x8CA0;&#x8CAC; | &#x524D;&#x7AEF;&#x88FD;&#x4F5C;
+        |                         負責 | 前端介面製作
     #page_04(style='display: none;')
-      #page_title_word &#x6210;&#x54E1;&#x4ECB;&#x7D39;
+      #page_title_word 成員介紹
       img#photo_1(src='src/photo/王鴻縉.jpg', type='button', onclick='photo5()')
-      #page_title_word(style='left: 25vh; top: 46.5vh; font-size: 3vh;') / &#x738B;&#x9D3B;&#x7E09;
+      #page_title_word(style='left: 25vh; top: 46.5vh; font-size: 3vh;') / 王鴻縉
       img#photo_2(src='src/photo/邱明叡.jpg', type='button', onclick='photo6()')
-      #page_title_word(style='left: 25vh; top: 70.5vh; font-size: 3vh;') / &#x90B1;&#x660E;&#x53E1;
+      #page_title_word(style='left: 25vh; top: 70.5vh; font-size: 3vh;') / 邱明叡
     #page_04_01(style='display: none;')
       img#photo_big(src='src/photo/王鴻縉.jpg')
-      #name_big / &#x738B;&#x9D3B;&#x7E09;
+      #name_big / 王鴻縉
       img#intro_box(src='src/intro_box.png')
       #intro_big(style='width: 31vh; left: 7.5vh;')
-        | &#x8077;&#x4F4D; | &#x5DE5;&#x7A0B;&#x5E2B;
+        | 職位 | 工程師
         br
-        |                         &#x8208;&#x8DA3; | &#x6E38;&#x6CF3; &#x6392;&#x7403;
+        |                         興趣 | 游泳 排球
         br
-        |                         &#x5C08;&#x9577; | Android App&#x8A2D;&#x8A08;
+        |                         專長 | Android App設計
         br
-        |                         &#x8CA0;&#x8CAC; | &#x524D;&#x7AEF;&#x88FD;&#x4F5C;
+        |                         負責 | 前端介面製作
     #page_04_02(style='display: none;')
       img#photo_big(src='src/photo/邱明叡.jpg')
-      #name_big / &#x90B1;&#x660E;&#x53E1;
+      #name_big / 邱明叡
       img#intro_box(src='src/intro_box.png')
       #intro_big
-        | &#x8077;&#x4F4D; | &#x5DE5;&#x7A0B;&#x5E2B;
+        | 職位 | 工程師
         br
-        |                         &#x8208;&#x8DA3; | &#x770B;&#x96FB;&#x5F71; &#x7FBD;&#x7403;
+        |                         興趣 | 看電影 羽球
         br
-        |                         &emsp;&emsp;&nbsp;&thinsp;&thinsp;&thinsp;&#x901B;&#x5E02;&#x96C6;
+        |                         &emsp;&emsp;&nbsp;&thinsp;&thinsp;&thinsp;逛市集
         br
-        |                         &#x5C08;&#x9577; | &#x722C;&#x87F2; &#x6DF1;&#x5EA6;&#x6A21;&#x578B;
+        |                         專長 | 爬蟲 深度模型
         br
-        |                         &#x8CA0;&#x8CAC; | &#x5F8C;&#x7AEF;&#x64B0;&#x5BEB;
+        |                         負責 | 後端撰寫
     #page_05(style='display: none;')
-      #page_title_word &#x6210;&#x54E1;&#x4ECB;&#x7D39;
+      #page_title_word 成員介紹
       img#photo_1(src='src/photo/郭庭嘉.jpg', type='button', onclick='photo7()')
-      #page_title_word(style='left: 25vh; top: 46.5vh; font-size: 3vh;') / &#x90ED;&#x5EAD;&#x5609;
-      //
-        <img id="photo_2" src="src/photo/邱明叡.jpg">
-        <div id="page_title_word" style="left: 25vh; top: 70.5vh; font-size: 3vh;">/ 邱明叡</div>
+      #page_title_word(style='left: 25vh; top: 46.5vh; font-size: 3vh;') / 郭庭嘉
     #page_05_01(style='display: none;')
       img#photo_big(src='src/photo/郭庭嘉.jpg')
-      #name_big / &#x90ED;&#x5EAD;&#x5609;
+      #name_big / 郭庭嘉
       img#intro_box(src='src/intro_box.png')
       #intro_big(style='width: 31vh; left: 7.5vh;')
-        | &#x8077;&#x4F4D; | &#x5DE5;&#x7A0B;&#x5E2B;
+        | 職位 | 工程師
         br
-        |                         &#x8208;&#x8DA3; | &#x8FFD;&#x5287; KPOP
+        |                         興趣 | 追劇 KPOP
         br
-        |                         &#x5C08;&#x9577; | Deep Learning
+        |                         專長 | Deep Learning
         br
-        |                         &#x8CA0;&#x8CAC; | &#x5F8C;&#x7AEF;&#x64B0;&#x5BEB;
+        |                         負責 | 後端撰寫
     #page_06(style='display: none;')
-      #page_title_word(style='top: 25vh;') &#x6700;&#x5F8C;...
+      #page_title_word(style='top: 25vh;') 最後...
       #page_title_word(style='left: 6vh; top: 35.5vh; font-size: 3vh;')
-        | &#x611F;&#x8B1D;&#x60A8;&#x4E0B;&#x8F09;&#x672C;&#x904A;&#x6232;&#xFF0C;
+        | 感謝您下載本遊戲，
         br
-        | &#x795D;&#x60A8;&#x6709;&#x7F8E;&#x597D;&#x7684;&#x904A;&#x6232;&#x9AD4;&#x9A57;!
+        | 祝您有美好的遊戲體驗!
       img#group(src='src/photo/group.jpg')
     #page_07(style='display: none;')
-      #page_title_word(style='left: 8vh; top: 42vh; font-size: 7vh;') &#x4ECB;&#x7D39;&#x5B8C;&#x7562;
+      #page_title_word(style='left: 8vh; top: 42vh; font-size: 7vh;') 介紹完畢
       #page_title_word(style='left: 24vh; top: 50vh; font-size: 3vh;') The End
     .botton_div
       img#previous(src='src/previous.png', type='button', onclick='previous()')
